[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "newspaper_boy"
version = "0.1.0"
description = "get your news for a nickel"
authors = [{ name = "NewsBoy" }]
requires-python = ">=3.12"

dependencies = ["requests>=2.31.0", "playwright", "python-dotenv>=1.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/newspaper_boy"]
